@startuml
skinparam classAttributeIconSize 0
together {
class Heading
class Direction
class InstructionType
}
interface Navigator {
    + getLocation() : String
    + spin(callingCapcom : NASACapcom, heading : SpinDirection) : void
    + move(callingCapcom : NASACapcom) : void
}

abstract class Rover extends Navigator  {
  # String roverId
  # Plateau plateau
  # NASACapcom capcom
  # int xPosition
  # int yPosition
  # Heading currentHeading

  + getId() : String
  + getPlateau() : Plateau
}

class SurfaceRover implements Rover  {
    + SurfaceRover(capcom : NASACapcom, roverId : String, plateau : Plateau,\nxCoordinate : int, yCoordinate : int, heading : Heading)
}

interface PlateauInterface  {
   + isValidCoordinate(xCoordinate : int, yCoordinate : int) : boolean
   + getId() : String
   + getDimensions() : String
   + storeRoverPosition() : boolean
}

abstract class Plateau extends PlateauInterface {
  # String id
  # String dimensions
  # <List>RoverDetails rovers

  + showMap() : void
  + hideMap(finished : boolean) : void
  + isMapVisible() : boolean
}

class QuadPlateau implements Plateau {
  - int xMaximum
  - int yMaximum

   + QuadPlateau(plateauId : String, xMaximum : int, yMaximum : int)
}


enum Heading
{
NORTH
EAST
SOUTH
WEST
+ getHeadingInitial() : char
+ getNewHeading(direction : Direction) : HeadingEnum
+ getByInitial(heading : char) : HeadingEnum
}

enum Direction
{
LEFT
RIGHT
}

enum InstructionType
{
CREATE_PLATEAU
CREATE_ROVER
MOVE
SWITCH_PLATEAU
SWITCH_ROVER
SHOW_MAP
HIDE_MAP
+ getInstructionType(instruction : String) : InstructionType
}

interface NASACapcomInterface {
  + processInstruction(instruction : String) : String
  + getStatusReport() : String
}

abstract class NASACapcom implements NASACapcomInterface {
  - Map<String, Rover> roverMap;
  - Map<String, Plateau> plateauMap;
  - Plateau currentPlateau
  - Rover currentRover

  + processInstruction(instruction : String) : String
  + getStatusReport() : String
  # createPlateau(xMaximum : int, yMaximum : int) : void
  # createRover(xCoordinate : int, yCoordinate : int, heading : HeadingEnum) : void
  # getPlateauById(PlateauId : String) : Plateau
  # getRoverById(roverId : String) : Rover
  - processMoveSequence(moveSequence : String) : void
  - getParametersFromInstruction(instruction : String) : List<String>
}

class NASACapcomService extends NASACapcom
{
  + getPlateauList() : String
  + getRoverList() : String
}

interface PlateauMapInterface {
  + show(rovers : List<RoverDetails>) : void
  + hide() : void
  + isMapVisible() : boolean
}

class QuadPlateauMap implements PlateauMapInterface {
  + QuadPlateauMap(name : String, xMaximum : int, yMaximum : int)
}

class RoverDetails {
  - String roverName
  - int xPosition
  - int yPosition
  - char heading

  + getRoverName() : String
  + getXPosition() : int
  + getYPosition() : int
  + getHeading() : char
  + updatePosition(roverName : String, xPosition : int, yPosition : int, heading:char)
}

Plateau -- NASACapcomService
Rover -- NASACapcomService
Rover -- Plateau
Plateau -- RoverDetails
RoverDetails -- QuadPlateauMap
QuadPlateau -- QuadPlateauMap

PlateauInterface -[hidden]d- Plateau
Heading -[hidden]> Navigator
@enduml